feat: real-time analysis
