# docs/swagger.json
@@ -483,8 +483,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "注册结果",
+                        "schema": {
+                            "$ref": "#/definitions/model.AccountBook"
+                        }
                     },
                     "400": {
                         "description": "请求体异常",
@@ -580,6 +583,13 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "创建人(只能合并自己创建的账本)",
+                        "name": "creator_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
                         "description": "合并的账本id  A",
                         "name": "merge_account_book_id",
                         "in": "query",
@@ -594,8 +604,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "账本结果",
+                        "schema": {
+                            "$ref": "#/definitions/model.AccountBookResp"
+                        }
                     },
                     "400": {
                         "description": "请求体异常",
@@ -936,7 +949,8 @@
                         "type": "integer",
                         "description": "对应的账本id",
                         "name": "account_book_id",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -952,8 +966,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "用户id",
-                        "name": "user_id",
+                        "description": "交易id",
+                        "name": "id",
                         "in": "query"
                     }
                 ],
@@ -1006,12 +1020,6 @@
                         "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "记录账户id",
-                        "name": "creator_id",
-                        "in": "query"
-                    },
-                    {
                         "type": "string",
                         "description": "交易日期",
                         "name": "date",
@@ -1031,6 +1039,12 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
+                        "description": "付款人id",
+                        "name": "pay_user_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "array",
                         "items": {
                             "type": "integer"
@@ -1041,6 +1055,10 @@
                         "in": "query"
                     },
                     {
+                        "enum": [
+                            1,
+                            2
+                        ],
                         "type": "integer",
                         "description": "类型:收入/支出,交易类型必须是0或者1",
                         "name": "type",
@@ -1112,6 +1130,14 @@
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "description": "付款人id",
+                        "name": "pay_user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minItems": 1,
                         "type": "array",
                         "items": {
                             "type": "integer"
@@ -1119,7 +1145,8 @@
                         "collectionFormat": "csv",
                         "description": "RelatedUserIDs 涉及那些人",
                         "name": "related_user_ids",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "enum": [
@@ -1134,8 +1161,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "交易记录",
+                        "schema": {
+                            "$ref": "#/definitions/model.Transaction"
+                        }
                     },
                     "400": {
                         "description": "请求体异常",
@@ -1157,13 +1187,6 @@
                 ],
                 "summary": "删除交易记录",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "账本id",
-                        "name": "account_book_id",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "交易记录id",
@@ -1268,6 +1291,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "手机号",
+                        "name": "phone_number",
+                        "in": "query"
+                    },
+                    {
                         "type": "object",
                         "description": "余额详情",
                         "name": "balance_detail",
@@ -1305,6 +1334,13 @@
                         "type": "string",
                         "description": "账号名称，昵称，全局唯一",
                         "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "手机号",
+                        "name": "phone_number",
                         "in": "query",
                         "required": true
                     },
@@ -1491,7 +1527,7 @@
                     "type": "string"
                 },
                 "creator_id": {
-                    "description": "创建人",
+                    "description": "创建人,不允许修改",
                     "type": "integer"
                 },
                 "deleted_at": {
@@ -1631,6 +1667,10 @@
                     "description": "主键id",
                     "type": "integer"
                 },
+                "pay_user_id": {
+                    "description": "付款人id",
+                    "type": "integer"
+                },
                 "related_user_ids": {
                     "description": "RelatedUserIDs 涉及那些人",
                     "type": "array",
@@ -1693,6 +1733,10 @@
                 },
                 "name": {
                     "description": "账号名称，昵称，全局唯一",
+                    "type": "string"
+                },
+                "phone_number": {
+                    "description": "手机号",
                     "type": "string"
                 },
                 "updated_at": {
