# model/user.go
@@ -14,16 +14,17 @@ type BalanceDetail map[string]float64
 // User 用户账户
 type User struct {
 	Model
-	Name                 string  `json:"name" form:"name" gorm:"uniqueIndex:idx_user_name"`      //账号名称，昵称，全局唯一
-	DefaultAccountBookID uint    `json:"default_account_book_id" form:"default_account_book_id"` // 默认账本id
-	Balance              float64 `json:"balance" form:"balance"`                                 // 余额
+	PhoneNumber          string        `json:"phone_number" form:"phone_number" gorm:"uniqueIndex:idx_phone_number"`   // 手机号
+	Name                 string        `json:"name" form:"name" gorm:"uniqueIndex:idx_user_name"`                      //账号名称，昵称，全局唯一
+	DefaultAccountBookID uint          `json:"default_account_book_id" form:"default_account_book_id"`                 // 默认账本id
+	Balance              float64       `json:"balance" form:"balance"`                                                 // 余额
+	Friend               pq.Int32Array `json:"friend" form:"friend" gorm:"type:integer[]" swaggertype:"array,integer"` // 朋友列表
+	IconUrl              string        `json:"icon_url" form:"icon_url"`                                               // 用户头像的对象存储地址
 	// BalanceDetail 余额详情
 	// @swagger:type object
 	// @additionalProperties type=number format=double
 	// @example {"temperature":36.5,"humidity":0.42}
 	BalanceDetail BalanceDetail `json:"balance_detail" form:"balance_detail" gorm:"type:json"`
-	Friend        pq.Int32Array `json:"friend" form:"friend" gorm:"type:integer[]" swaggertype:"array,integer"` // 朋友列表
-	IconUrl       string        `json:"icon_url" form:"icon_url"`                                               // 用户头像的对象存储地址
 }
 
 // GetUserReq -
@@ -45,6 +46,7 @@ type ModifyUserReq struct {
 	Friend               *pq.Int32Array     `json:"friend" form:"friend" gorm:"type:integer[]" swaggertype:"array,integer"`         // 朋友列表
 	IconUrl              string             `json:"icon_url" form:"icon_url" swaggerignore:"true"`                                  // 用户头像的对象存储地址
 	BalanceDetail        map[string]float64 `json:"balance_detail" form:"balance_detail" gorm:"type:json" swaggerignore:"true"`     // 余额详情
+	PhoneNumber          string             `json:"phone_number" form:"phone_number" binding:"omitempty,phone"`                     // 手机号
 }
 
 // ModifyProfilePhotoReq -
@@ -54,7 +56,8 @@ type ModifyProfilePhotoReq struct {
 
 // RegisterUserReq -
 type RegisterUserReq struct {
-	Name string `json:"name" form:"name" binding:"required,notblank"` //账号名称，昵称，全局唯一
+	Name        string `json:"name" form:"name" binding:"required,notblank"`              //账号名称，昵称，全局唯一
+	PhoneNumber string `json:"phone_number" form:"phone_number" binding:"required,phone"` // 手机号
 }
 
 // Scan - 重写，支持map类型pg
