# server/transaction.go
@@ -1,7 +1,9 @@
 package server
 
 import (
+	"Lumino/common/http_error_code"
 	"Lumino/model"
+	"Lumino/router/middleware"
 	"Lumino/service"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -23,21 +25,21 @@ func NewTransactionServer(transactionService *service.TransactionService) *Trans
 // @Summary	注册交易记录
 // @Tags 交易记录
 // @Param        transaction  query      model.RegisterTransactionReq  true  "交易信息"
-// @Success	204
+// @Success	200 {object}  model.Transaction             "交易记录"
 // @Failure	400 {object}  http_error_code.AppError      "请求体异常"
 // @Failure	500 {object}  http_error_code.AppError      "服务端异常"
 // @Router		/api/v1/transaction [post]
 func (s *TransactionServer) Register(c *gin.Context) {
 	req := model.RegisterTransactionReq{}
-	if err := c.ShouldBind(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+	if err := middleware.Bind(c, &req); err != nil {
+		c.Error(err)
 		return
 	}
-	if err := s.TransactionService.Register(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
-		return
+	if resp, err := s.TransactionService.Register(&req); err != nil {
+		c.Error(err)
+	} else {
+		c.JSON(http.StatusOK, resp)
 	}
-	c.JSON(http.StatusNoContent, nil)
 	return
 }
 
@@ -51,12 +53,12 @@ func (s *TransactionServer) Register(c *gin.Context) {
 // @Router		/api/v1/transaction [get]
 func (s *TransactionServer) Get(c *gin.Context) {
 	req := model.GetTransactionReq{}
-	if err := c.ShouldBind(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+	if err := middleware.Bind(c, &req); err != nil {
+		c.Error(err)
 		return
 	}
 	if resp, err := s.TransactionService.Get(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+		c.Error(err)
 	} else {
 		c.JSON(http.StatusOK, resp)
 	}
@@ -73,23 +75,24 @@ func (s *TransactionServer) Get(c *gin.Context) {
 // @Router		/api/v1/transaction [put]
 func (s *TransactionServer) Modify(c *gin.Context) {
 	req := model.ModifyTransactionReq{}
-	if err := c.ShouldBind(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+	if err := middleware.Bind(c, &req); err != nil {
+		c.Error(err)
 		return
 	}
 	if req.Amount < 0.0 || req.Type != 0 && req.Amount <= 0.0 {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": "金额需要>0"})
+		c.Error(http_error_code.BadRequest("金额需要>0"))
 		return
 	}
 	if req.Type != 0 && req.Type != model.IncomeType && req.Type != model.SpendingType {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": "交易类型必须是0或者1"})
+		c.Error(http_error_code.BadRequest("交易类型必须是0或者1"))
 		return
 	}
-	if err := s.TransactionService.Modify(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+	if resp, err := s.TransactionService.Modify(&req); err != nil {
+		c.Error(err)
 		return
+	} else {
+		c.JSON(http.StatusOK, resp)
 	}
-	c.JSON(http.StatusNoContent, nil)
 	return
 }
 
@@ -103,12 +106,12 @@ func (s *TransactionServer) Modify(c *gin.Context) {
 // @Router		/api/v1/transaction [delete]
 func (s *TransactionServer) Delete(c *gin.Context) {
 	req := model.DeleteTransactionReq{}
-	if err := c.ShouldBind(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
+	if err := middleware.Bind(c, &req); err != nil {
+		c.Error(err)
 		return
 	}
 	if err := s.TransactionService.Delete(&req); err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+		c.Error(err)
 		return
 	}
 	c.JSON(http.StatusNoContent, nil)
